fix(Show) Broken summary gradient on Safari

--- a/src/Show/Show.css
+++ b/src/Show/Show.css
@@ -40,7 +40,7 @@
   
   content: "";
 
-  background-image: linear-gradient(to bottom, transparent, var(--color-body));
+  background-image: linear-gradient(rgba(255, 255, 255, 0), var(--color-body));
 }
 
 .tv-show-card__summary {
